files/base/etherpad/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherpad-mysql
  labels:
    app: etherpad-mysql
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etherpad-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: etherpad-mysql
    spec:
      containers:
        - name: etherpad-mysql
          image: docker.io/mariadb:10
          imagePullPolicy: Always
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
            - --innodb-file-per-table=1
            - --log-bin
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            # capabilities:
            #   drop: [ "all" ]
            #   add: [ "chown" ]
          ports:
            - name: etherpad-mysql
              containerPort: 3306
      volumes:
        - name: mysql-data
          hostPath:
            path: /srv/etherpad/mysql
            type: DirectoryOrCreate


---
apiVersion: v1
kind: Service
metadata:
  name: etherpad-mysql
  labels:
    app: etherpad-mysql
spec:
  selector:
    app: etherpad-mysql
  ports:
    - protocol: TCP
      name: mysql
      port: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherpad
  labels:
    app: etherpad
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etherpad
  template:
    metadata:
      labels:
        app: etherpad
    spec:
      containers:
        - name: etherpad
          image: docker.io/etherpad/etherpad:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: [ "all" ]
          ports:
            - name: web
              containerPort: 9001
          volumeMounts:
            - name: etherpad-data
              mountPath: /opt/etherpad-lite/var
      volumes:
        - name: etherpad-data
          hostPath:
            type: DirectoryOrCreate
            path: /srv/etherpad/data

---
apiVersion: v1
kind: Service
metadata:
  name: etherpad
  labels:
    app: etherpad
spec:
  selector:
    app: etherpad
  ports:
    - protocol: TCP
      name: web
      port: 9001

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: etherpad
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: etherpad
spec:
  rules:
    - host: etherpad.192.168.56.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: etherpad
                port:
                  number: 9001

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: etherpad-admin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: private-ip-ranges@file
  labels:
    app: etherpad
spec:
  rules:
    - host: etherpad.192.168.56.11.nip.io
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: etherpad
                port:
                  number: 9001
